labs/21/app-ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  labels:
    somekey: somevalue
spec:
  ingressClassName: nginx
  rules:
    - host: www.example.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: exampleService
                port:
                  number: 80
            path: /
